# doci.py

./: README.md  doci.css  doci.py  doci.spec  dok.css  dok.py  dok.spec  index.html  literally.py  pyproject.toml  template.html
scripts/: build.py
