[project]
name = "literally"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py[plugins]>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "pygments>=2.19.2",
    "pystache>=0.6.8",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.14.1",
    "snoop>=0.6.0",
    "watchdog>=6.0.0",
]
